[project]
name = "agent-tool-compiler"
version = "0.1.0"
description = "ATC: Agent Tool Compiler - promote successful agent workflows into reusable tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "typer",
  "rich",
  "python-dotenv",
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "fastapi",
  "uvicorn",
  "mcp",
]

[project.scripts]
atc = "agent_tool_compiler.cli.main:app"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tool_compiler"]

[tool.ruff]
line-length = 100
target-version = "py311"
